fix spacing error in html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,7 +66,6 @@ html {
 
 
 
-
 /* from Bulma */
 .icon {
     align-items: center;
@@ -84,77 +83,130 @@ html {
     width: fit-content;
 }
 
+.btn-black {
+    background: black;
+    color: white;
+    
+}
+
+.btn-outline-black {
+    background: white;
+    color: black !important;
+    border: 1px solid black;
+    
+}
+
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+    background: black;
+    color: white !important;
+    
+}
 
 
+.btn-black:hover,
+.btn-black:active,
+.btn-black:focus {
+    background: #222;
+    color: white;
+    
+}
 
-/* ------------------------------- bootstrap toasts */
+.text-black {
+    color: #000 !important;
+   
+}
 
-.message-container {
+.border-black {
+    border: 1px solid black !important;
+    
+}
+
+.bg-black {
+    background: #000 !important;
+    
+}
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+    
+}
+
+a.category-badge > span.badge:hover {
+    background: #212529 !important;
+    color: #fff !important;
+}
+
+.btt-button {
+    height: 21px;
+    width: 21px;
     position: fixed;
-    top: 72px;
-    right: 15px;
-    z-index: 99999999999;
+    bottom: 10px;
+    right: 10px;
 }
 
-.custom-toast {
-    overflow: visible;
+.btt-link,
+.update-link,
+.remove-item {
+    cursor: pointer;
+    size: 8px;
 }
 
-.toast-capper {
-    height: 2px;
+
+.pb-5 {
+  padding-bottom: 1rem !important;
+
 }
 
-/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
-.arrow-up {
-    width: 0; 
-    height: 0; 
-    border-left: 4px solid transparent;
-    border-right: 4px solid transparent; 
-    border-bottom: 10px solid black;
-    position: absolute;
-    top: -10px;
-    right: 36px;
+.m-5 {
+    margin: 5rem !important;
 }
 
-/* Convenience classes - colors copied from Bootstrap */
-.arrow-primary {
-    border-bottom-color: #007bff !important;
+.w-25 {
+    width: 20% !important;
 }
 
-.arrow-secondary {
-    border-bottom-color: #6c757d !important;
+/* Footer */
+footer {
+    display: grid;
+    position: fixed;
+    background-color: #000;
+    color: #fafafa;
+    font-family: 'Open Sans', sans-serif;
+    bottom: 0;
+    height: 2rem;
+    font-size: 1rem;
+    
+       
 }
 
-.arrow-success {
-    border-bottom-color: #28a745 !important;
+footer i {
+    color: #fafafa;
+    
 }
 
-.arrow-danger {
-    border-bottom-color: #dc3545 !important;
+.footer-logo {        
+    width: 100%;
+    padding: 0px;
+    border: -1px solid white;
+    font-size: 1rem;
+         
 }
 
-.arrow-warning {
-    border-bottom-color: #ffc107 !important;
+.footer-link {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1rem;
 }
-
-.arrow-info {
-    border-bottom-color: #17a2b8 !important;
-}
-
-.arrow-light {
-    border-bottom-color: #f8f9fa !important;
-}
-
-.arrow-dark {
-    border-bottom-color: #343a40 !important;
-}
-
-.bag-notification-wrapper {
-    height: 100px;
-    overflow-x: hidden;
-    overflow-y: auto;
-}
-
+ 
+  
+                    
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
@@ -164,16 +216,19 @@ html {
   }
 }
 
+
 /* Allauth form formatting */
 
 .allauth-form-inner-content p {
     margin-top: 1.5rem; /* mt-4 */
     color: #6c757d; /* text-secondary */
+    
 }
 
 .allauth-form-inner-content input {
     border-color: #000;
     border-radius: 0;
+    
 }
 
 .allauth-form-inner-content label:not([for='id_remember']) {
@@ -182,6 +237,7 @@ html {
 
 .allauth-form-inner-content input::placeholder {
     color: #aab7c4;
+    
 }
 
 .allauth-form-inner-content button,
@@ -202,6 +258,7 @@ html {
     font-size: 1rem;
     line-height: 1.5;
     border-radius: 0;
+   
 
     /* standard bootstrap btn transitions */
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
@@ -212,10 +269,13 @@ html {
 	color: #fff;
     background-color: #222;
     border-color: #222;
+    
 }
 
 .allauth-form-inner-content a {
-	color: #17a2b8; /* text-info */
+	color: #4a56a1d3; /* text-info */
+   
+    
 }
 
 /* Product Form */
@@ -238,18 +298,19 @@ html {
 .custom-checkbox .custom-control-label::before {
     border-radius: 0;
     border-color: #dc3545;
+    
 }
 
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
     background-color: #dc3545;
     border-color: #dc3545;
     border-radius: 0;
+    
 }
-
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
-    .fixed-top-desktop-only {
+    .fixed-top-desktop-only{
         position: fixed;
         top: 0;
         right: 0;
@@ -271,63 +332,50 @@ html {
     body {
         height: calc(100vh - 116px);
     }
-
-    .display-4.logo-font.text-black {
-        font-size: 2rem;
-    }
-
-    .nav-link {
-        padding: 0.15rem;
-    }
-
-    .nav-link i.fa-lg {
-        font-size: 1rem;
-    }
-
-    .navbar-toggler {
-        padding: .6rem .6rem;
-        font-size: 1rem;
-    }
-
-    #delivery-banner h4 {
-        font-size: .9rem;
-    }
-
-    .btn.btn-outline-black.rounded-0,
-    .btn.btn-black.rounded-0 {
-        padding: .375rem .375rem;
-    }
-
-    .btn.btn-outline-black.rounded-0.btn-lg,
-    .btn.btn-black.rounded-0.btn-lg {
-        padding: .375rem .375rem;
-        font-size: .75rem;
-    }
-
-    .increment-qty, .decrement-qty {
-        padding: .25rem .5rem !important;
-    }
 }
 
 
-/* -------------------------------- Footer */
-
-.footer {
-    min-height:50px;
+.display-4.logo-font.text-black {
+    font-size: 2rem;
 }
 
-.social-media {
-    background: #BB390F;
-    height: 100px;
+.nav-link {
+    padding: 0.15rem;
 }
 
-.social-links {
-    color: #fafafa;
-    padding: 10px;
-    font-size: 26px;
+.nav-link i.fa-lg {
+    font-size: 1rem;
 }
 
-.support-txt {
-    color: #fafafa;
-    font-size: 15px;
+.navbar-toggler {
+    padding: .6rem .6rem;
+    font-size: 1rem;
 }
+
+#delivery-banner h4 {
+    font-size: .9rem;
+}
+
+.btn.btn-outline-black.rounded-0,
+.btn.btn-black.rounded-0 {
+    padding: .375rem .375rem;
+}
+
+.btn.btn-outline-black.rounded-0.btn-lg,
+.btn.btn-black.rounded-0.btn-lg {
+    padding: .375rem .375rem;
+    font-size: .75rem;
+}
+
+.increment-qty, .decrement-qty {
+    padding: .25rem .5rem !important;
+}
+
+
+
+.content-container{
+    padding-top: 75px;
+    scroll-padding-bottom: 75px;
+}
+
+
